2007-08-18  Peter Rezikov  <crazypit13@gmail.com>
        * rails-spec.el: base support for rspec. Function
        `rails-spec:run-all', `rails-spec:run-this-file', `rails-spec:run-last',
        `rails-spec:run-files'.  Variables: `rails-spec:all-files',
        `rails-spec:last-files', `rails-spec:runner',
        `rails-spec:runner-options'.
        * rails-find.el, rails-ui.el: finds for rspec
        * rails-project.el: new functions: rails-project:in-root-with-cd, 
        rails-project:compile-in-root
        * rails-lib.el: new macro in-directory
                                         
2007-08-18  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-scripts.el (rails-script:run-interactive): setup a
	variable `ruby-buffer' for corect working with `inf-ruby'

2007-08-17  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-ruby.el (hs-minor-mode-hook): created, placed in hs-setup-overlay initialization to fix a bug #13162

2007-08-15  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-scripts.el (rails-script:setup-output-buffer): fixed compilation warning

	* rails-ruby.el (ruby-hs-minor-mode): created, support ruby in hs-minor-mode

2007-08-11  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-compat.el (try-complete-abbrev): fixed

	* rails-core.el (rails-core:configuration-file, :rails-core:configuration-files): created functions

	* rails-speedbar-feature.el (rails-speedbar:roots): added
	migrations and configuration files to speedbar

2007-08-05  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-test.el, rails-ui.el: apply patch #11998, created additional key
	shortcuts (thanks Tom Ten Thij)

	* rails-compat.el: apply patch #12743, replace
	`indent-or-complete` to `indent-and-complete` (thanks Peter Williams)

2007-08-04  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-navigation.el (rails-nav:goto-layouts): fixed bug #12754,
	broken `rails-nav:goto-layouts`

2007-07-26  Dmitry Galinsky  <dima.exe@gmail.com>

	* inflections.el: more inflections (by Edvard Majakari)
